crates/mockql-core/src/graphql/snapshots/schema_filter/interfaces/mockql_core__graphql__schema_filter__tests__filter_produces_expected_schema_for_operations@interfaces__typename_only.graphql.snap
---
source: crates/mockql-core/src/graphql/schema_filter.rs
expression: "SCHEMA_FILTER.filter(&content,\noperation_name.as_deref()).expect(\"filter should succeed\")"
input_file: crates/mockql-core/src/graphql/snapshots/schema_filter/interfaces/typename_only.graphql
---
"""
The `ID` scalar type represents a unique identifier, often used to refetch an object or as key for a cache. The ID type appears in a JSON response as a String; however, it is not intended to be human-readable. When expected as an input type, any string (such as `"4"`) or integer (such as `4`) input value will be accepted as an ID.
"""
scalar ID
interface Node {
  id: ID!
  createdAt: String!
}
type Product implements Node & Reviewable {
  id: ID!
  upc: String!
  weight: Int
  price: Int
  inStock: Boolean
  shippingEstimate: Int
  name: String
  reviews: [Review]
  reviewsForAuthor(authorID: ID!): [Review]
  createdAt: String!
  averageRating: Float
}
type Query {
  node(id: ID!): Node
}
interface Reviewable {
  reviews: [Review]
  averageRating: Float
}
"""
The `String` scalar type represents textual data, represented as UTF-8 character sequences. The String type is most often used by GraphQL to represent free-form human-readable text.
"""
scalar String
